tests/ui/runtime-eff-index-removed.rs
fn main() {
    let _ = core::mem::size_of::<hibana::runtime::ids::EffIndex>();
}
